# squaredle-solver

./: Cargo.toml
resources/: words.txt
src/: eval_grid.rs  main.rs  read_input.rs  trie.rs
