[package]
name = "squaredle-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
ndarray = "0.15.6"
rand = "0.8.5"
rayon = "1.5.3"
dashmap = "5.4.0"
lazy_static = "1.4.0"